k8s/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8stest
spec:
  replicas: 1
  template:
    metadata:
      name: k8stest
      labels:
        app: k8stest
        env: current
    spec:
      containers:
      - name: k8stest
        image: gcr.io/k8stest-image
        resources:
          limits:
            memory: 0
            cpu: 0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
