k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8stest
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  type: NodePort
  selector:
    app: k8stest
    env: current
