k8s/ingress.pro.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8stest-ingress
  namespace: production
spec:
  backend:
    serviceName: k8stest
    servicePort: 80
